<resources>
    <string name="app_name">Bank.System.Android</string>
    <string name="view">View</string>
    <string name="account_id">Account Id</string>
    <string name="balance">Balance</string>
    <string name="interest">Interest</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="acc_deleted">Account deleted successfull</string>
    <string name="acc_updated">Account updated successfull</string>
    <string name="back">Back</string>
    <string name="client">Client</string>
    <string name="acc_added">Account added successfully</string>
</resources>
